# delta

./: LICENSE  delta.cabal  expected.txt  test.txt  test2.txt
app/: Main.hs
src/: Lib.hs
