name:                delta
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/will-ockmore/delta#readme
license:             BSD3
license-file:        LICENSE
author:              Will Ockmore
maintainer:          will.ockmore@gmail.com
copyright:           William Ockmore
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable delta-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , delta
  default-language:    Haskell2010

test-suite delta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , delta
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/will-ockmore/delta
